2005-09-25 Axel Simon <A.Simon@kent.ac.uk>

	* glade/Glade.chs: Fixed a comment reported by Marco Tulio Gontijo
	e Silva.

	* gtk/Graphics/UI/Gtk.hs: Only import Cairo stuff if Cairo is
	present.

2005-09-22 Duncan Coutts <duncan@coutts.uklinux.net>

	* mozembed/Graphics/UI/Gtk/MozEmbed/.keep: add file just to ensure
	that cvs creates the directory since otherwise it'd be empty and cvs
	sometimes prunes empty directories.

	* compile, missing: add these autotools files so that users don't have
	to use autoreconf -i. (Other autotool projects seem to keep these
	files in cvs and I'm getting tired of telling people they need to use
	autoreconf with the -i flag.)
	
2005-09-20 Duncan Coutts <duncan@coutts.uklinux.net>

	* sourceview/Graphics/UI/Gtk/SourceView/SourceBuffer.chs,
	sourceview/Graphics/UI/Gtk/SourceView/SourceLanguage.chs,
	sourceview/Graphics/UI/Gtk/SourceView/SourceLanguagesManager.chs,
	sourceview/Graphics/UI/Gtk/SourceView/SourceMarker.chs,
	sourceview/Graphics/UI/Gtk/SourceView/SourceStyleScheme.chs,
	sourceview/Graphics/UI/Gtk/SourceView/SourceTag.chs,
	sourceview/Graphics/UI/Gtk/SourceView/SourceTagTable.chs,
	sourceview/Graphics/UI/Gtk/SourceView/SourceView.chs: export the
	castTo* functions.

2005-09-19 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/Abstract/Widget.chs.pp: bug fix. Add a special
	case to widgetAddEvents work around a GTK+ bug. See
	http://bugzilla.gnome.org/show_bug.cgi?id=316702

2005-09-16 Duncan Coutts <duncan@coutts.uklinux.net>

	* glade/Graphics/UI/Gtk/Glade.chs: make sure the widget returned from
	xmlGetWidget is fully evaluated so that casting errors get reported
	from xmlGetWidget rather than when the widget is first used and
	restructure the code slightly so that the named widget not existing
	also gets reported from xmlGetWidget rather than at first use.

2005-09-15 Duncan Coutts <duncan@coutts.uklinux.net>

	* TODO: note a possible solution to the win32 non-console app problem.
